--- a/src/AlterBankApi/appsettings.Development.json
+++ b/src/AlterBankApi/appsettings.Development.json
@@ -9,6 +9,6 @@
     }
   },
   "ConnectionStrings": {
-    "AlterDB": "Server=192.168.1.65; Database=AlterBank; Integrated Security=False; User id=sa; Password=Pa74word2020;"
+    "AlterDB": "Server=192.168.1.65; Database=AlterBank; Integrated Security=False; User id=sa; Password=Pa74word2020;Max Pool Size=32767;Pooling=true;Connection Timeout=30"
   }
 }
