--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -1,4 +1,4 @@
-version: '3.4'
+version: '3.7'
 
 services:
   alterbank-api:
@@ -6,19 +6,20 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - CONNECTIONSTRING=${ALTERDB:-Server=192.168.1.65; Database=AlterBank; Integrated Security=False; User id=sa; Password=Pa74word2020;Max Pool Size=32767;Pooling=true;Connection Timeout=30"}
     ports:
-      - "80"
+      - "5000:80"
   sqldata:
     environment:
       - SA_PASSWORD=Pa74word2020
       - ACCEPT_EULA=Y
       - MSSQL_PID=Evaluation
     ports:
-      - "5433:1433"
+      - "1433:1433"
     volumes:
       - alterbank_data:/var/opt/mssql
 
 
 
 volumes:
-  alterbank-data:
+  alterbank_data: 
     external: false
+
