--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -3,8 +3,7 @@ version: '3.7'
 services:
   alterbank-api:
     environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - CONNECTIONSTRING=${ALTERDB:-Server=192.168.1.65; Database=AlterBank; Integrated Security=False; User id=sa; Password=Pa74word2020;Max Pool Size=32767;Pooling=true;Connection Timeout=30"}
+      - DB_CONNECTION_STRING=Server=192.168.1.65,5433; Database=AlterBank; Integrated Security=False; User id=sa; Password=Pa74word2020;Max Pool Size=32767;Pooling=true;Connection Timeout=30
     ports:
       - "5000:80"
   sqldata:
@@ -13,7 +12,7 @@ services:
       - ACCEPT_EULA=Y
       - MSSQL_PID=Evaluation
     ports:
-      - "1433:1433"
+      - "5433:1433"
     volumes:
       - alterbank_data:/var/opt/mssql
 
